# PolarRover

./: .gitignore  README.md  master_parts_list.xlsx
Electrical/: README.md
Electrical/wiring/: README.md  single_track.md  tank.md
Instruments/: README.md
Mechanical/: README.md
Mechanical/enclosure/: README.md  assembly.scad  brain_box.scad  components.scad  lid.scad  mount_bench.scad  mount_mtt_sled.scad  params.scad
Simulator/: README.md
Simulator/examples/: multipass_reftrack.geojson
Software/: Makefile  README.md
Software/rover_drive/: pyproject.toml
Software/rover_drive/rover_drive/controllers/: __init__.py  base.py  feedforward_stanley.py  gp_feedforward.py  gp_mpc.py  gp_mppi.py  ilc_feedforward.py  lqr.py  mpc.py  mpcc.py  pure_pursuit.py  spatial_predictive.py  stanley.py
Software/rover_drive/rover_drive/estimation/: __init__.py  enkf.py  state_model.py
Software/rover_drive/rover_drive/learning/: __init__.py  gp.py  gp_dynamics.py
Software/rover_drive/rover_drive/modes/: __init__.py  calibration.py  linked_cmp.py  multipass.py  teleop.py  waypoint.py  waypoint_dubins.py
Software/rover_drive/rover_drive/planning/: __init__.py  dubins.py  rosette.py
Software/rover_drive/tests/: test_bicycle_state_model.py  test_calibration.py  test_dubins.py  test_enkf.py  test_import.py  test_linked_cmp_driver.py  test_multipass_driver.py  test_rosette.py  test_teleop.py  test_waypoint_driver.py
Software/rover_field_boot/: pyproject.toml
Software/rover_field_boot/deploy/: install.sh  nisse.sh  rover-field-boot.service  rover-onboard.service
Software/rover_field_boot/rover_field_boot/: __init__.py  cli.py  discovery.py  launcher.py  selector.py
Software/rover_field_boot/tests/: test_discovery.py  test_launcher.py  test_selector.py
Software/rover_hardware/: pyproject.toml
Software/rover_hardware/rover_hardware/: __init__.py  backend.py  frame_coder.py
Software/rover_hardware/rover_hardware/mtt154/: __init__.py  single_track.py  tank.py
Software/rover_hardware/tests/: test_import.py  test_tank_mixing.py
Software/rover_onboard/: pyproject.toml
Software/rover_onboard/rover_onboard/: __init__.py  cli.py
Software/rover_onboard/rover_onboard/audio/: __init__.py  events.py  phrasebook.py  tts.py
Software/rover_onboard/rover_onboard/display/: __init__.py  oled.py
Software/rover_onboard/rover_onboard/status/: __init__.py  broker.py  snapshot.py
Software/rover_onboard/rover_onboard/vision/: __init__.py  capture.py  segmentation.py
Software/rover_onboard/rover_onboard/web/: __init__.py  app.py
Software/rover_onboard/rover_onboard/web/templates/: index.html
Software/rover_onboard/rover_onboard/wifi/: __init__.py  hotspot.py
Software/rover_onboard/tests/: test_audio_events.py  test_display.py  test_import.py  test_status_broker.py  test_vision.py
Software/rover_sim/: pyproject.toml
Software/rover_sim/rover_sim/config/: __init__.py  scenario.py
Software/rover_sim/rover_sim/control/: __init__.py  command.py  driver.py  state.py
Software/rover_sim/rover_sim/missions/: __init__.py  base.py  geojson.py
Software/rover_sim/rover_sim/safety/: __init__.py  interlocks.py
Software/rover_sim/rover_sim/sensors/: __init__.py  gnss.py  radio.py
Software/rover_sim/rover_sim/surveys/: __init__.py  base.py  geojson.py
Software/rover_sim/rover_sim/vehicle/: __init__.py  base.py  side_by_side.py  single_track.py
Software/rover_sim/tests/: test_command_bus.py  test_gnss.py  test_import.py  test_missions.py  test_radio.py  test_safety.py  test_scenario_config.py  test_side_by_side.py  test_single_track.py
Software/rover_sim_emulator/: pyproject.toml
Software/rover_sim_emulator/rover_sim_emulator/: cli.py  cmp_runner.py  dispatch.py  drivers.py  logger.py  reftrack.py  runner.py
Software/rover_sim_emulator/rover_sim_emulator/viz/: animate.py  animate_multipass_comparison.py
Software/rover_sim_emulator/tests/: test_cmp_runner.py  test_emulator.py  test_reftrack.py  test_runner.py
Software/rover_sim_startup/: pyproject.toml
Software/rover_sim_startup/rover_sim_startup/: cli.py  main.py  storage.py
Software/rover_sim_startup/rover_sim_startup/routes/: api.py  pages.py
Software/rover_sim_startup/rover_sim_startup/static/: app.css
Software/rover_sim_startup/rover_sim_startup/templates/: base.html  index.html  log_viewer.html  mission_map.html  scenario_edit.html
Software/rover_sim_startup/tests/: test_app.py  test_import.py
Testing/: README.md  t1_can_adapter.md  t2_mtt_crawl.md
examples/: cmp_mission.geojson  waypoint_mission.geojson
surveys/: README.md
(+5 files in other folders)
