[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rover_drive"
version = "0.0.1"
description = "Nisse drive code: teleop, waypoint, multipass, and linked-CMP navigation modes"
requires-python = ">=3.10"
authors = [{ name = "hoffmaao" }]
dependencies = [
    "numpy>=1.24",
    "rover_sim",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rover_drive"]
