[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rover_field_boot"
version = "0.0.1"
description = "Nisse field boot — loads surveys from a removable card or local disk and dispatches the right runner"
requires-python = ">=3.10"
authors = [{ name = "hoffmaao" }]
dependencies = [
    "rover_sim",
    "rover_drive",
    "rover_sim_emulator",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
rover-field-boot = "rover_field_boot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rover_field_boot"]
