[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rover_sim_emulator"
version = "0.0.1"
description = "Batch test harness that runs Nisse drive code against the rover_sim kinematic simulator"
requires-python = ">=3.10"
authors = [{ name = "hoffmaao" }]
dependencies = [
    "rover_sim",
    "rover_drive",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
rover-sim-emu = "rover_sim_emulator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rover_sim_emulator"]
