[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rover_sim_startup"
version = "0.0.1"
description = "Nisse mission authoring and log viewing web app (offline, file-based)"
requires-python = ">=3.10"
authors = [{ name = "hoffmaao" }]
dependencies = [
    "rover_sim",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]

[project.scripts]
rover-sim-startup = "rover_sim_startup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rover_sim_startup"]
